[gd_scene load_steps=23 format=3 uid="uid://bv68ccbwb11gm"]

[ext_resource type="Texture2D" uid="uid://dm5fjsaq1x30b" path="res://Sprites/Enemies/Enemy1.png" id="1_b4voc"]
[ext_resource type="Script" path="res://Scenes/enemy.gd" id="1_kxdyi"]
[ext_resource type="Texture2D" uid="uid://da34757jepat0" path="res://Sprites/Blast/Die1-Sheet.png" id="2_wmxbd"]
[ext_resource type="PackedScene" uid="uid://duhnarvm8hla0" path="res://Scenes/enemy_bullet_scene.tscn" id="2_x6bq8"]
[ext_resource type="PackedScene" uid="uid://bnni30we7u80u" path="res://Scenes/repair_kit.tscn" id="3_7qt7h"]
[ext_resource type="Texture2D" uid="uid://c7cyemsc1c1n2" path="res://Sprites/Blast/Die2-Sheet.png" id="3_bxhia"]
[ext_resource type="Texture2D" uid="uid://c31phxm7n6c6b" path="res://Sprites/Enemies/Enemy2.png" id="4_cjswa"]
[ext_resource type="PackedScene" uid="uid://th2vgbmjab10" path="res://Scenes/amunitions.tscn" id="4_kb55m"]
[ext_resource type="Texture2D" uid="uid://lt6e2p67ps4y" path="res://Sprites/Enemies/Enemy3.png" id="6_qbjsd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6abp"]
size = Vector2(15.2, 15.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ll6ys"]
size = Vector2(13.4, 10.6)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rswy"]
atlas = ExtResource("2_wmxbd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8xnr"]
atlas = ExtResource("2_wmxbd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6pbl"]
atlas = ExtResource("2_wmxbd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mheor"]
atlas = ExtResource("2_wmxbd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_484mu"]
atlas = ExtResource("2_wmxbd")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnnmc"]
atlas = ExtResource("3_bxhia")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dlgr"]
atlas = ExtResource("3_bxhia")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hx7p"]
atlas = ExtResource("3_bxhia")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afef7"]
atlas = ExtResource("3_bxhia")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjqcf"]
atlas = ExtResource("3_bxhia")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dh6ki"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rswy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8xnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6pbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mheor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_484mu")
}],
"loop": false,
"name": &"DieV1",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnnmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dlgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hx7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afef7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjqcf")
}],
"loop": false,
"name": &"DieV2",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_b4voc")
}],
"loop": true,
"name": &"EnemyV1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cjswa")
}],
"loop": true,
"name": &"EnemyV2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_qbjsd")
}],
"loop": true,
"name": &"EnemyV3",
"speed": 5.0
}]

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(10, 10)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_kxdyi")
bullet_scene = ExtResource("2_x6bq8")
repair_kit = ExtResource("3_7qt7h")
amunitions = ExtResource("4_kb55m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.4, -0.4)
shape = SubResource("RectangleShape2D_l6abp")

[node name="EnemyHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2(-0.3, -0.3)
shape = SubResource("RectangleShape2D_ll6ys")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dh6ki")
animation = &"EnemyV3"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 9.6)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StateTimer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Enemy"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
